fix :"made the location name in the map to be more visible with the colour black"

--- a/web/static/styles.css
+++ b/web/static/styles.css
@@ -190,3 +190,7 @@ tr:nth-child(odd) {
     justify-content: center;
     flex-direction: column;
 }
+
+.leaflet-popup-content {
+    color: black;
+}
